--- a/Bonfire.colloquyStyle/Contents/Resources/genericTemplate.html
+++ b/Bonfire.colloquyStyle/Contents/Resources/genericTemplate.html
@@ -1,15 +1,19 @@
 <!DOCTYPE html>
-<html lang="en-CA">
+<html lang="en">
 <head>
+
   <script>
     function scrollToBottom() {
       document.body.scrollTop = document.body.offsetHeight;
     }
   </script>
+
 </head>
 <body>
 
 <section id="contents"></section>
+
+<div id="shadow"></div>
 
 </body>
 </html>
